Fixing masonry layout bug

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -71,7 +71,7 @@ body {
         margin: 5px 0 !important;
 
       img {
-        margin-bottom: 5px
+        margin-bottom: 5px;
       }
 
       h5 {
